Atom/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
03:42:37 **** Rebuild of configuration Debug for project i2c_test ****
Info: Internal Builder is used for build
i586-poky-linux-gcc "-IV:\\Edison\\iotdk-ide-win\\devkit-x86\\sysroots\\i586-poky-linux/usr/include/mraa" -O0 -g3 -Wall -c -fmessage-length=0 "--sysroot=V:\\Edison\\iotdk-ide-win\\devkit-x86\\sysroots\\i586-poky-linux" -m32 -march=i586 -c -ffunction-sections -fdata-sections -o "src\\i2c_test.o" "..\\src\\i2c_test.c" 
i586-poky-linux-gcc "--sysroot=V:\\Edison\\iotdk-ide-win\\devkit-x86\\sysroots\\i586-poky-linux" -lmraa -o i2c_test "src\\i2c_test.o" 
03:42:54 **** Incremental Build of configuration Debug for project i2c_test ****
Info: Internal Builder is used for build
i586-poky-linux-gcc "-IV:\\Edison\\iotdk-ide-win\\devkit-x86\\sysroots\\i586-poky-linux/usr/include/mraa" -O0 -g3 -Wall -c -fmessage-length=0 "--sysroot=V:\\Edison\\iotdk-ide-win\\devkit-x86\\sysroots\\i586-poky-linux" -m32 -march=i586 -c -ffunction-sections -fdata-sections -o "src\\i2c_test.o" "..\\src\\i2c_test.c" 
..\src\i2c_test.c: In function 'main':
..\src\i2c_test.c:61:10: error: redeclaration of 'transmission_buf' with no linkage
  uint8_t transmission_buf[6];   //buffer
          ^
..\src\i2c_test.c:53:10: note: previous declaration of 'transmission_buf' was here
  uint8_t transmission_buf[6];
          ^
..\src\i2c_test.c:67:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
03:43:15 **** Incremental Build of configuration Debug for project i2c_test ****
Info: Internal Builder is used for build
i586-poky-linux-gcc "-IV:\\Edison\\iotdk-ide-win\\devkit-x86\\sysroots\\i586-poky-linux/usr/include/mraa" -O0 -g3 -Wall -c -fmessage-length=0 "--sysroot=V:\\Edison\\iotdk-ide-win\\devkit-x86\\sysroots\\i586-poky-linux" -m32 -march=i586 -c -ffunction-sections -fdata-sections -o "src\\i2c_test.o" "..\\src\\i2c_test.c" 
..\src\i2c_test.c: In function 'main':
..\src\i2c_test.c:61:10: error: redeclaration of 'transmission_buf' with no linkage
  uint8_t transmission_buf[6];   //buffer
          ^
..\src\i2c_test.c:53:10: note: previous declaration of 'transmission_buf' was here
  uint8_t transmission_buf[6];
          ^
03:43:35 **** Incremental Build of configuration Debug for project i2c_test ****
Info: Internal Builder is used for build
i586-poky-linux-gcc "-IV:\\Edison\\iotdk-ide-win\\devkit-x86\\sysroots\\i586-poky-linux/usr/include/mraa" -O0 -g3 -Wall -c -fmessage-length=0 "--sysroot=V:\\Edison\\iotdk-ide-win\\devkit-x86\\sysroots\\i586-poky-linux" -m32 -march=i586 -c -ffunction-sections -fdata-sections -o "src\\i2c_test.o" "..\\src\\i2c_test.c" 
i586-poky-linux-gcc "--sysroot=V:\\Edison\\iotdk-ide-win\\devkit-x86\\sysroots\\i586-poky-linux" -lmraa -o i2c_test "src\\i2c_test.o" 
Info: Nothing to build for i2c_test
